# OpenCVTiledProcessing

./: CMakeLists.txt  README.md
source/: ImageToHexFile.cpp  ProcessTileBased.cpp  ProcessTileBased.h  TiledAlgorithm.cpp
